@startuml
class Sistema {
- embarcaciones: Embarcacion

+ calcularAlquiler(embarcacion: Embarcacion): double
+ obtenerMasLujosoQue(unYate: Yate, otroYate: Yate): Yate
+ esGrande(velero:Velero): boolean

}

class Embarcacion {
- capitan: Capitan
- precioBase: double
- valorAdicional: double
- anioFabricacion: int
- eslora : double

+ calcularAlquiler(): double

}

class Velero {
- cantidadMastiles: int

+ esGrande (): boolean

}

class Yate {
- cantidadCamarotes: int

+ esMasLujosoQue(otroYate: Yate): boolean
}

class Capitan {
- nombre: String
- apellido: String
- matricula: String

+ Capitan(nombre: String, apellido: String, matricula: String): Capitan

}


Sistema *--> "*" Embarcacion: - embarcaciones
Embarcacion o---> "1" Capitan: - capitan

Yate -right-|> Embarcacion
Velero -left-|> Embarcacion


@enduml